--- a/index.html
+++ b/index.html
@@ -35,15 +35,12 @@
     }
     </style>
     <script>
-        const scriptElement = document.createElement('script');
-        scriptElement.type = 'text/javascript';
-        scriptElement.textContent = `const aa = () => {
-            var testChildFrame = document.createElement('iframe');
-            document.body.appendChild(testChildFrame);
-            window.alert('not aborted');
-            }
-            aa();`;
-        (document.head||document.documentElement).appendChild(scriptElement);
+        const test = () => {
+        var testChildFrame = document.createElement('iframe');
+        document.body.appendChild(testChildFrame);
+        window.alert('not aborted');
+        }
+        test();
     </script>
 </head>
 
