--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     </style>
     <script>
         const test = () => {
-        var testChildFrame = document.createElement('iframe');
-        document.body.appendChild(testChildFrame);
-        window.alert('not aborted');
+            const testChildFrame = document.createElement('iframe');
+            document.body.appendChild(testChildFrame);
+            window.alert('not aborted');
         }
         test();
     </script>
