--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             const testChildFrame = document.createElement('iframe');
             document.body.appendChild(testChildFrame);
         }
-        test();
+        setTimeout(() => { test(); }, 300)
     </script>
 </head>
 
