--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
         color: #38488f;
         text-decoration: none;
     }
-    @media (max-width: 700px) {
+    /* @media (max-width: 700px) {
         div {
             margin: 0 auto;
             width: auto;
         }
-    }
+    } */
     </style>
     <script>
         const test = () => {
@@ -45,10 +45,13 @@
 
 <body>
 <div>
-    <h1>Example Domain</h1>
-    <p>This domain is for use in illustrative examples in documents. You may use this
-    domain in literature without prior coordination or asking for permission.</p>
-    <p><a href="https://www.iana.org/domains/example">More information...</a></p>
+    <h1>Example Page</h1>
+    <p>Enumerating objects: 5, done.
+        Counting objects: 100% (5/5), done.
+        Delta compression using up to 4 threads
+        Compressing objects: 100% (2/2), done.
+        Writing objects: 100% (3/3), 307 bytes | 307.00 KiB/s, done.
+        Total 3 (delta 1), reused 0 (delta 0)</p>
 </div>
 </body>
 </html>
