one more update

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title>Redirecting...</title>
-    <script src="./redirect.js"></script>
+    <script>
+        const TARGET_URL = 'http://example.com';
+        window.location.replace(TARGET_URL);
+    </script>
   </head>
   <body></body>
 </html>
